version/0.17/_sources/API/visualization/_autosummary/ansys.aedt.core.visualization.report.field.FarField.rst.txt
FarField
========

.. currentmodule:: ansys.aedt.core.visualization.report.field

.. autoclass:: FarField

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      FarField.add_cartesian_x_marker
      
      
      FarField.add_cartesian_y_marker
      
      
      FarField.add_limit_line_from_equation
      
      
      FarField.add_limit_line_from_points
      
      
      FarField.add_note
      
      
      FarField.add_trace_characteristics
      
      
      FarField.add_trace_to_report
      
      
      FarField.apply_report_template
      
      
      FarField.create
      
      
      FarField.delete
      
      
      FarField.delete_traces
      
      
      FarField.edit_general_settings
      
      
      FarField.edit_grid
      
      
      FarField.edit_header
      
      
      FarField.edit_legend
      
      
      FarField.edit_x_axis
      
      
      FarField.edit_x_axis_scaling
      
      
      FarField.edit_y_axis
      
      
      FarField.edit_y_axis_scaling
      
      
      FarField.export_config
      
      
      FarField.export_table_to_file
      
      
      FarField.get_solution_data
      
      
      FarField.hide_legend
      
      
      FarField.import_traces
      
      
      FarField.jsonalize_tree
      
      
      FarField.suppress_all
      
      
      FarField.unsuppress_all
      
      
      FarField.update_expressions_with_defaults
      
      
      FarField.update_property
      
      
      FarField.update_trace_in_report
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      FarField.children
      FarField.command
      FarField.differential_pairs
      FarField.domain
      FarField.expressions
      FarField.far_field_sphere
      FarField.limit_lines
      FarField.matrix
      FarField.notes
      FarField.plot_name
      FarField.polyline
      FarField.primary_sweep
      FarField.primary_sweep_range
      FarField.properties
      FarField.reduced_matrix
      FarField.report_category
      FarField.report_type
      FarField.secondary_sweep
      FarField.secondary_sweep_range
      FarField.traces
      FarField.use_pulse_in_tdr
      FarField.variations
   
   